@@ -5,9 +5,9 @@ DIST patch-2.6.32.10.bz2 295315 RMD160 dfb8ae6307bbf4532115b19c116599f10fe77d3d 
 DIST patch-2.6.32.7.bz2 173502 RMD160 27dabad80c93856ccb6e612c3bbc2393715d0d2d SHA1 5d8627efca2385cd0b99c36e0eb373a6e211b149 SHA256 b3382d02ec25e3ae86fac7852ba540e59af770a76604d317b39df57505b376bf
 DIST patch-2.6.32.8.bz2 205390 RMD160 f526d5c4819793161f6e350de0875e49cbd1a6b0 SHA1 7ef9194f599eb1bb2103c7094074c86d23f00710 SHA256 50c08a7ffcad1e7cd2e7c2c906795896dd36ce71249d816914c306dcc5875fd2
 DIST patch-2.6.32.9.bz2 236949 RMD160 b52487fadf2b125511d600375ea8d9dd6e17ebef SHA1 297d60161cd35dadd599e86ddbbb77f8f41a7f23 SHA256 8aeb15c31fb09c769f004c8dc51e29aa26be8e84d70db418af70ecefc463459a
-EBUILD calculate-sources-2.6.32.10.ebuild 713 RMD160 d28c71e145e92cc1ddca091acdec1c45a96cf2f6 SHA1 3ed523e10ab13a2f67bff3a229a6878bc7d9c7b9 SHA256 77e43d0c147275e9cc34ca779d301dd2f4f0f9bfd578995c21e7c492c3786b02
-EBUILD calculate-sources-2.6.32.7.ebuild 711 RMD160 0e26b76a666a792498823e9bfabb1cd71df2abe8 SHA1 369ece94d5b6d6377f086c967ddda3e4e399c150 SHA256 bbb65ed65f87cd1e5eb6ddcc22b425b5c7f6058f32eb5cea41eda660587e792a
-EBUILD calculate-sources-2.6.32.8.ebuild 711 RMD160 0e26b76a666a792498823e9bfabb1cd71df2abe8 SHA1 369ece94d5b6d6377f086c967ddda3e4e399c150 SHA256 bbb65ed65f87cd1e5eb6ddcc22b425b5c7f6058f32eb5cea41eda660587e792a
-EBUILD calculate-sources-2.6.32.9.ebuild 711 RMD160 0e26b76a666a792498823e9bfabb1cd71df2abe8 SHA1 369ece94d5b6d6377f086c967ddda3e4e399c150 SHA256 bbb65ed65f87cd1e5eb6ddcc22b425b5c7f6058f32eb5cea41eda660587e792a
-MISC ChangeLog 407 RMD160 18da88c8ede1446a5760955155dcf1d34acf4e30 SHA1 8d77fde38d6d8653cf89587572139e6bbee92af7 SHA256 ae64535d470c7d858783ab0b77a3ce2e2ccb96d3b5d842873bee0898e3a73dfb
+EBUILD calculate-sources-2.6.32.10.ebuild 740 RMD160 41c5b51d2aca64a9d139c81da028620216b6ec38 SHA1 0d5f633f6f868e2228c6d2388245e6794a19c6c5 SHA256 87bcd495d71ba3c55c7e6732f843cd0bc3bc14e21227ba011eb3ac2fac769fad
+EBUILD calculate-sources-2.6.32.7.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.32.8.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+EBUILD calculate-sources-2.6.32.9.ebuild 738 RMD160 7df77879fe3155b94748845656e2ec32f6430e83 SHA1 319846c6760f2c42d8586bec53e4914336c6cf93 SHA256 7d2f5fb1e822de6205c11c430cf3b0c1522cff5037e47cd2ae9c37942fa175f2
+MISC ChangeLog 647 RMD160 f59b7a11a3ffb8dd9cccdd687b741c87aa4d1451 SHA1 73788933bd93af678ddd355ef8b9f36c4a5ce42c SHA256 2e5b5d11a7062a3628e9b1e4140af85965db4dc5ae5042afdbfa758e380c9a14
 MISC metadata.xml 364 RMD160 308abbf758102b5591c353f41a62be6836f98693 SHA1 5029bd7cf897e4eb8f8e8fa935c02d4c73eb59db SHA256 0bee25282d797e432206373a8535689412a3f76f8974315f8ecf73536bf0e505
