@@ -16,7 +16,7 @@ UNIPATCH_LIST="${DISTDIR}/${PN}-${CKV}.tar.bz2"
 
 DEPEND="vmlinuz? ( >=sys-kernel/calckernel-3.4.10.903-r22
 					>=sys-apps/calculate-1.3.5
-					app-arch/xz-utils
+					|| ( app-arch/xz-utils app-arch/lzma-utils )
 					sys-apps/v86d )"
 
 pkg_postinst() {
